
  Documentation:
        - Clarify correct techniques for Moose controllers (domm)

  Bug fixes:
        - Further change pushing 'env' attribute down into Catalyst::Engine
          to make $c->engine->env work in all cases (kmx)
        - Also fix $c->engine->env in Catalyst::Test tests (kmx)
          - Tests for this (t0m)

   New features:      
        - Add $c->req->remote_user to disambiguate from $c->req->user (dwc)

5.80004 2009-05-18 17:03:23
        - Rename the actions attribute in Catalyt::Controller to
          _controller_actions to avoid name clashes with application
          controller naming. (random)
        - Test for using Moose in components which have a non-Moose base class
          Fixed by 349cda in Moose 0.78 (t0m)
        - Fix deprecation message for Catalyst::Dispatcher to refer
          to the class actually calling the deprecated method. RT#45741 (t0m)
        - Clarify limitations of $request->base and $request->secure.
          (Phil Mitchell)
        - Add 'use Catalyst' to documentation for a Moose MyApp class as
          noted by dmaki. (t0m)
        - Fix so that / (and other special characters) are URL encoded when
          passed into $c->uri_for as Args/CaptureArgs (t0m)
        - Fix development server so that $c->engine->env returns the correct
          environment (t0m)
        - Require Moose 0.78 to fix metaclass incompatibility issues (t0m)
        - Require MooseX::MethodAttributes 0.10 and use
          Moose::Meta::Class->initialize rather than Moose->init_meta to fix
          bugs related to having a 'meta' method in your controller (t0m)
        - Fix cases where your application failing to compile could cause perl
          to report 'Unknown Error' (t0m)
        - Support adding Moose::Roles to the plugin list. These are applied to
          MyApp after plugins have been pushed onto @ISA (t0m)
        - Fix calling $c->req->parameters as the first thing you do when
          parse_on_demand is on (t0m)