@@ -13,8 +13,10 @@
         - Also fix $c->engine->env in Catalyst::Test tests (kmx)
           - Tests for this (t0m)
 
-   New features:      
+   New features:
         - Add $c->req->remote_user to disambiguate from $c->req->user (dwc)
+        - Require MooseX::MethodAttributes 0.12 so that action methods
+          (with attributes) can be used in / composed from Moose roles.
 
 5.80004 2009-05-18 17:03:23
         - Rename the actions attribute in Catalyt::Controller to
